--- a/html/index.html
+++ b/html/index.html
@@ -14,31 +14,73 @@
         <h1>Royal Face Beauty</h1>
         <hr>
         <nav>
-            <a href="#">HOME</a>
-            <a href="#">Agende Online</a>
-            <a href="#">Cursos</a>
-            <a href="#">Equipe</a>
+            <a href="#trabalho">Produções</a>
+            <a href="#agende">Agende</a>
+            <a href="#equipe">Equipe</a>
+            <a href="https://www.instagram.com/royal.facebeauty/" target="_blank">Instagram <img src="../img/instagrambnw.png" alt="instagram"></a>
         </nav>
     </header>
     <main>
-        <section>
+        <section class="entrada">
             <header class="welcome">
-                <h2>Royal Face Beauty lhe dá as boas-vindas!</h2>
+                <h2>Bem-vindos ao site!</h2>
             </header>
-            <div id="slideshow">
-                        <div class="entire-content">
-                            <div class="content-carrousel">
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/758733/pexels-photo-758733.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/21261/pexels-photo.jpg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/567973/pexels-photo-567973.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/776653/pexels-photo-776653.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/54630/japanese-cherry-trees-flowers-spring-japanese-flowering-cherry-54630.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/131046/pexels-photo-131046.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/302515/pexels-photo-302515.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/301682/pexels-photo-301682.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                                <figure class="shadow"><img src="https://images.pexels.com/photos/933054/pexels-photo-933054.jpeg?w=940&h=650&auto=compress&cs=tinysrgb"/></figure>
-                            </div>
-                        </div>
+            <div id="carouselExampleFade" class="carousel slide " data-bs-ride="carousel" data-interval="5000">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="../img/img1.jpg" class="d-block w-100 m-auto " alt=" ...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="../img/img2.jpg" class="d-block w-100 m-auto" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="../img/img3.jpg" class="d-block w-100 m-auto" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <section class="background-trabalho">
+            <div class="layout">
+                <a name="trabalho"></a>
+                <h3>Alguns trabalhos</h3>
+                <section class="trabalho">
+                    <img src="../img/WhatsApp Image 2022-07-08 at 17.37.34.jpeg" alt="">
+                    <img src="../img/WhatsApp Image 2022-07-08 at 17.37.34.jpeg" alt="">
+                    <img src="../img/WhatsApp Image 2022-07-08 at 17.37.34.jpeg" alt="">
+                    <img src="../img/WhatsApp Image 2022-07-08 at 17.37.34.jpeg" alt="">
+                    <img src="../img/WhatsApp Image 2022-07-08 at 17.37.34.jpeg" alt="">
+                    <img src="../img/WhatsApp Image 2022-07-08 at 17.37.34.jpeg" alt="">
+                </section>
+            </div>
+        </section>
+        <a name="agende"></a>
+        <section class="agendamento">
+        <h3>Agende conosco</h3>
+            <p>Para agendar sua sessão conosco basta clicar no botão abaixo e assim que possível iremos lhe responder!</p>
+            <a href=""><button id="whatsapp">Clique Aqui <img src="../img/whatsapp.png" alt=""></button></a>
+        </section>
+        <a name="equipe"></a>
+        <h3>Nossa equipe</h3>
+        <section class="equipe">
+            <div class="card">
+                <img class="card-img-top" src="../img/WhatsApp Image 2022-07-08 at 17.55.03.jpeg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text"><a href="https://www.instagram.com/izagoncalo/" target="_blank">Iza Gonçalo <img src="../img/instagram.png" alt="instagram"></a></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="../img/WhatsApp Image 2022-07-08 at 17.37.34.jpeg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text"><a href="https://www.instagram.com/luanaazeved0/" target="_blank">Luana Azevedo <img src="../img/instagram.png" alt="instagram"></a></p>
+                </div>
             </div>
         </section>
     </main>
